# jobmonitor

./: Dockerfile  README.md  automatizador.sql  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml
.Docker/: .gitignore  entrypoint.sh
.mysql-data/db/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
.mysql-data/db/#innodb_redo/: #ib_redo10  #ib_redo9
.mysql-data/db/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
.mysql-data/db/django_db/: auth_group.ibd  auth_group_permissions.ibd  auth_permission.ibd  auth_user.ibd  auth_user_groups.ibd  auth_user_user_permissions.ibd  django_admin_log.ibd  django_content_type.ibd  django_migrations.ibd  django_session.ibd
.mysql-data/db/handel_1/: auth_group.ibd  auth_group_permissions.ibd  auth_permission.ibd  auth_user.ibd  auth_user_groups.ibd  auth_user_user_permissions.ibd  django_admin_log.ibd  django_content_type.ibd  django_migrations.ibd  django_session.ibd  task_groups.ibd  tasks.ibd
.mysql-data/db/mysql/: general_log_213.sdi  (+1 more)
job_monitor/: asgi.py  settings.py  urls.py  wsgi.py
jobmonitor/: asgi.py  settings.py  urls.py  wsgi.py
popular_automatizador/: index.php
popular_automatizador/classes/: DB.class.php  Insert.class.php
tarefas/: admin.py  forms.py  models.py  urls.py  views.py
tarefas/templates/: base.html  home.html  taskGroups.html  tasks.html
(+111 files in other folders)
