[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Leandro Freitas", email = "ljadson.freitas@gmail.com"},
]
dependencies = [
    "asgiref>=3.5.2",
    "pip>=22.2.2",
    "setuptools>=65.2.0",
    "sqlparse>=0.4.2",
    "mysqlclient>=2.1.1",
    "l>=0.11.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
