[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Leandro Freitaw", email = "leandro.freitas@enervie-gruppe.d"},
]
dependencies = [
    "django>=4.1",
    "mysqlclient>=2.1.1",
    "simplejson>=3.17.6",
    "setuptools>=65.3.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
